# fin_cli

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRACTS.md  FINPACK_TRANSFORMATION_PLAN.md  INTEGRATION.md  README.md  REFACTORING_SUMMARY.md  TESTING.md  TOOLS_REFERENCE.md  arch-conversation-fincli-only-refactor.txt  demo_task3.py  project_structure.md  pyproject.toml  pytest.ini  requirements.txt  research.ipynb  run.bat  run.sh  singleton.py
.claude/: settings.json  settings.local.json
.claude/hooks/: load-rules.js  on-stop.js  post-edit.js  utils.js
.cursor/plans/: finpack-two-step-screen-analyze-a24d54ce.plan.md
.cursor/rules/: backend-architect.mdc  code-reviewer.mdc  codeexecution.mdc  execution-qa-handoff.mdc  frontend-developer.mdc  projectspec.mdc  qa-automation.mdc  qa-debugger.mdc  secedgardocs.mdc  system-architect.mdc  ui-designer.mdc
agents/roles/: backend-architect.md  code-architect.md  code-reviewer.md  frontend-developer.md  project-planning-handoff-specialist.md  qa-debugger.md  ui-designer.md  verifier.md
agents/rules/: _shared-workflow.md  load-context.md  orchestrator.md  preflight.md  scaffold-module.md
config/: api_keys.json  config.py
core/configuration/: config_base.py  configurator.py
core/converters/: json.py
docs/: ALTERNATIVE_DATA_SOURCES.md  ARCHITECTURE_DECISIONS.md  ENHANCED_PROVIDERS_README.md  FEEDBACK-LOG.md  FINPACK_TECHNICAL_PLAN.md  LIBRARY_CONSOLIDATION_PROPOSAL.md  MAINTENANCE_GUIDE.md  MIGRATION_SUMMARY.md  MODULE_REFERENCE.md  REFACTORING_GUIDE.md  THESIS.md  TROUBLESHOOTING_GUIDE.md  api_reference.md  configuration.md
docs/api/: openapi.json  openapi.yaml  postman_collection.json
docs/bugs/: README.md
docs/features/: README.md  fincli-api-plan.md  list-filters-spec.md
docs/features/archive/: fincli-api-plan.md  list-filters-plan.md  list-filters-spec.md  pipeline-mode-spec.md  scrape-link-restoration-spec.md
docs/refactoring/: README.md  cli-entry-point-spec.md  history-path-config-spec.md
docs/refactoring/archive/: cli-entry-point-spec.md  history-path-config-spec.md
docs/reviewer/: README.md  history-dir-cwd-portability.md
docs/reviewer/archive/: history-dir-cwd-portability.md
docs/superpowers/plans/: 2026-05-02-agent-harness-replication.md
docs/superpowers/specs/: 2026-05-02-agent-harness-replication-design.md  2026-05-04-fincli-only-refactor-design.md  2026-05-22-fincli-api-design.md
example/: advanced_usage.py  simple_usage.py
fincli/: __main__.py
fincli/app/: cli.py  exit_codes.py  main.py
fincli/cli/: cli_stock_screener.py
fincli/resource/params/: _label_format.py  const.py  descriptive_params.py  fundamental_params.py  technical_params.py  validators.py
fincli/stock_screening/content/: stock_table.py
fincli/stock_screening/locators/: stock_table_locators.py
fincli/stock_screening/parsers/: stock_table.py
fincli/utils/: market_cap.py  quary_builders.py  web_scraper.py
fincli_api/: __init__.py  config.py  exception_handlers.py  main.py
fincli_api/adapters/: __init__.py  fincli.py
fincli_api/models/: __init__.py  errors.py  filters.py  screens.py
fincli_api/routes/: __init__.py  filters.py  meta.py  screens.py
fundainsight/app/: fincli.py  main.py  picker.py  stock_picker.py
fundainsight/calculators/: equity_calc.py  filters.py
fundainsight/domain/exceptions/: financial_exceptions.py
fundainsight/domain/interfaces/: data_provider.py
fundainsight/domain/models/: financial_data.py  stock.py
fundainsight/infrastructure/config/: settings.py
fundainsight/infrastructure/logging/: __init__.py
fundainsight/infrastructure/utils/: circuit_breaker.py
logger/: __init__.py  formatters.py  handlers.py  log_cycle.py  logger.py
scripts/: check_requirements.py  dump_openapi.py
shared/: __init__.py
shared/domain/: __init__.py
shared/domain/adapters/: __init__.py  fincli_data_adapter.py
shared/domain/services/: __init__.py  alpha_vantage_provider.py  composite_data_provider.py  financial_calculation_service.py  financial_data_provider.py  iex_cloud_provider.py  polygon_provider.py
shared/infrastructure/: __init__.py
shared/infrastructure/config/: __init__.py  api_keys_config.py  settings.py
shared/infrastructure/logging/: __init__.py  enhanced_formatters.py  enhanced_handlers.py  log_manager.py
shared/infrastructure/utils/: __init__.py  json_utils.py  measure.py  user_agent_rotator.py
src/finpack/: __init__.py  api.py
src/finpack/core/: analyzer.py  pipeline.py  screener.py
src/finpack/models/: config.py
src/finpack/providers/: base.py  yahoo.py  yfinance_provider.py
src/finpack/utils/: __init__.py  logging.py  quary_builders.py  web_scraper.py
tests/domain/models/: test_financial_data.py  test_stock.py
tests/e2e/: test_api_two_step.py
tests/e2e/api/: conftest.py  test_live_finviz.py
tests/infrastructure/config/: test_settings.py
tests/infrastructure/utils/: test_circuit_breaker.py
tests/integration/: _fixtures_loader.py  test_list_filters_output.py  test_pipeline_exit_codes.py  test_pipeline_streaming.py  test_pipeline_summary.py  test_pipeline_ticker_carveout.py  test_zero_row_success.py
tests/integration/api/: conftest.py  test_filters_integration.py  test_screens_integration.py
tests/integration/fixtures/: finviz_empty.html  finviz_happy.html  finviz_malformed_row.html  finviz_no_table.html  finviz_one_page.html
tests/shared/: __init__.py  test_fetch_urls_perf.py
tests/shared/domain/: test_task3_integration.py
tests/shared/infrastructure/: __init__.py
tests/unit/api/: conftest.py  test_api_edge_cases.py  test_api_facade.py  test_exception_handlers.py  test_filters_route.py  test_meta_route.py  test_models_validation.py  test_screens_route.py
tests/unit/app/: test_cli.py  test_cli_list_filters.py  test_cli_output.py  test_cli_pipeline.py  test_exit_codes.py
tests/unit/cli/: test_cli_stock_screener.py
tests/unit/configuration/: test_configurator_filters.py  test_output_path.py
tests/unit/converters/: test_json_to_tuples.py
tests/unit/core/: test_analyzer_extras.py  test_analyzer_facade.py  (+3 more)
(+23 files in other folders)
