[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fincli"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "requests",
    "urllib3<2",  # cfscrape requires urllib3 1.x API
    "pandas",
    "cfscrape",
    "click",
    "pydantic",
    "pydantic-settings",
    "colorama",
    "beautifulsoup4",
    "platformdirs",
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
    "types-beautifulsoup4",
    "pip-audit",
    # FastAPI TestClient transport (httpx>=0.23 required by starlette TestClient).
    "httpx",
    # YAML emission for scripts/dump_openapi.py (dev-only tooling; not used at
    # API runtime, which serves JSON via FastAPI's built-in /openapi.json).
    "pyyaml",
]

[project.scripts]
fincli = "fincli.app.cli:run_main"
fincli-api = "fincli_api.main:main"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "workspace_output",
    "workspace_materials",
    "dist",
    "htmlcov",
    "__pycache__",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Finviz filter inventory: `Fundamental_Params`, `Descriptive_Params`, and
# `Technical_Params` are public-API class names referenced by validators,
# query builders, tests, and the CONTRACTS §2.1 documentation. The mixed
# PascalCase + underscore style mirrors the Finviz vocabulary they wrap
# (`fa_pe`, `sec`, `ta_rsi14`) and is documented in CONTRACTS §2. Renaming
# would be a breaking change per CONTRACTS §7.
"fincli/resource/params/fundamental_params.py" = ["N801"]
"fincli/resource/params/descriptive_params.py" = ["N801"]
"fincli/resource/params/technical_params.py" = ["N801"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
files = ["fincli", "core", "config", "logger"]
strict = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["cfscrape", "cfscrape.*", "requests", "requests.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Default invocation excludes live tests so `pytest tests/` is fast and offline.
# The live tier (HTTP API e2e + any future live-Finviz check) is opt-in via
# `pytest -m live`. Spec §6.3 mandates the live-Finviz gate as a pre-PR check
# for fincli_api/ and fincli/stock_screening/ — that gate runs `-m live`.
addopts = "-ra -m 'not live'"
markers = [
    "live: marks tests as requiring live Finviz HTTP (deselect with -m 'not live')",
]

[tool.setuptools]
py-modules = ["singleton"]

[tool.setuptools.packages.find]
include = ["fincli*", "core*", "config*", "logger*", "fincli_api*"]
